--- a/csharp/ExcelAddInInstaller/ExcelAddInDeploy/Product.wxs
+++ b/csharp/ExcelAddInInstaller/ExcelAddInDeploy/Product.wxs
@@ -221,7 +221,7 @@
         <RegistryValue Root="HKCU" Key="Software\!(loc.ProductManufacturer)\!(loc.ProductNameNoSpace)" Name="Xll64Bit" Value="AddIns" KeyPath="yes" Type="string" />
         
         <!-- TODO 5/5: Set the Source path to the 32-bit xll location -->
-		  <File Id="EXCELXLL64PACKED.XLL" Name="!(loc.ProductNameNoSpace)64.xll" Source="C:\Users\kosak\git\deephaven-core\csharp\ExcelAddIn\bin\Release\net8.0-windows\publish\ExcelAddIn-AddIn64-packed.xll">
+		  <File Id="EXCELXLL64PACKED.XLL" Name="!(loc.ProductNameNoSpace)64.xll" Source="..\..\ExcelAddIn\bin\Release\net8.0-windows\publish\ExcelAddIn-AddIn64-packed.xll">
 			  <netfx:NativeImage Id="ngen_64Xll" Platform="64bit" Priority="0" />
 		  </File>
 
